2010-11-24  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/Epson-AcuLaser_C4100PS.xml,
	  printer/Epson-AcuLaser_C9100PS.xml,
	  printer/Epson-AcuLaser_2600PS.xml, printer/Epson-AL-2600.xml,
	  printer/Epson-AcuLaser_C1000.xml, printer/Epson-AL-C1000.xml,
	  printer/Epson-AcuLaser_C1900.xml, printer/Epson-AL-C1900.xml,
	  printer/Epson-AcuLaser_C1900PS.xml,
	  printer/Epson-AL-C1900_PS3.xml, printer/Epson-AcuLaser_C2000.xml,
	  printer/Epson-AL-C2000.xml, printer/Epson-AcuLaser_C2000PS.xml,
	  printer/Epson-AL-C2000_PS3.xml,
	  printer/Epson-AcuLaser_C2600PS.xml, printer/Epson-AL-C2600.xml,
	  printer/Epson-AcuLaser_C2800PS.xml, printer/Epson-AL-C2800.xml,
	  printer/Epson-AcuLaser_C3800PS.xml, printer/Epson-AL-C3800.xml,
	  printer/Epson-AcuLaser_C4000.xml, printer/Epson-AL-C4000.xml,
	  printer/Epson-AcuLaser_C4000PS.xml,
	  printer/Epson-AL-C4000_PS3.xml, printer/Epson-AcuLaser_C4100.xml,
	  printer/Epson-AL-C4100.xml, printer/Epson-AcuLaser_C4200PS.xml,
	  printer/Epson-AL-C4200.xml, printer/Epson-AcuLaser_C8500.xml,
	  printer/Epson-AL-C8500.xml, printer/Epson-AcuLaser_C8500PS.xml,
	  printer/Epson-AL-C8500PS.xml, printer/Epson-AcuLaser_C8600.xml,
	  printer/Epson-AL-C8600.xml, printer/Epson-AcuLaser_C8600PS.xml,
	  printer/Epson-AL-C8600_PS3.xml, printer/Epson-AcuLaser_C900.xml,
	  printer/Epson-AL-C900.xml, printer/Epson-AcuLaser_C9100.xml,
	  printer/Epson-AL-C9100.xml, printer/Epson-AcuLaser_C9200.xml,
	  printer/Epson-AL-C9200.xml, printer/Epson-AcuLaser_CX21PS.xml,
	  printer/Epson-AL-CX21.xml, printer/Epson-AcuLaser_M2000PS.xml,
	  printer/Epson-AL-M2000.xml, printer/Epson-AcuLaser_M2010PS.xml,
	  printer/Epson-AL-M2010.xml, printer/Epson-AcuLaser_M2400.xml,
	  printer/Epson-AL-M2400.xml, printer/Epson-AcuLaser_M2410.xml,
	  printer/Epson-AL-M2410.xml, printer/Epson-AcuLaser_M4000PS.xml,
	  printer/Epson-AL-M4000.xml, printer/Epson-AcuLaser_M8000.xml,
	  printer/Epson-AL-M8000.xml, printer/Epson-AcuLaser_MX20.xml,