@@ -1,0 +1,47 @@
+<printer id="printer/Epson-LP-8300CPD">
+  <make>Epson</make>
+  <model>LP-8300CPD</model>
+  <mechanism>
+    <color/>
+    <resolution>
+      <dpi>
+        <x>600</x>
+        <y>600</y>
+      </dpi>
+    </resolution>
+  </mechanism>
+  <lang>
+    <postscript level="3" />
+  </lang>
+  <autodetect>
+    <general>
+      <ieee1284>MFG:Epson;MDL:LP-8300CPD;</ieee1284>
+      <manufacturer>Epson</manufacturer>
+      <model>LP-8300CPD</model>
+    </general>
+  </autodetect>
+  <functionality>A</functionality>
+  <driver>Postscript-Epson</driver>
+  <drivers>
+    <driver>
+      <id>Postscript-Epson</id>
+      <ppd>PPD/Epson/eplp830c.ppd</ppd>
+    </driver>
+    <driver>
+      <id>Postscript</id>
+    </driver>
+  </drivers>
+  <comments>
+    <en>
+      This database entry was automatically generated
+      from the PPD file for this printer.&lt;p&gt;
+
+      Maximum paper width: 12.9 inches / 32.8 cm
+      (Wide format printer)&lt;p&gt;
+
+      Printing engine speed: 6 pages/min&lt;p&gt;
+
+
+    </en>
+  </comments>
+</printer>
