@@ -1,6 +1,6 @@
-<printer id="printer/Epson-LP-9800C">
+<printer id="printer/Epson-LP-8800CPS">
   <make>Epson</make>
-  <model>LP-9800C</model>
+  <model>LP-8800CPS</model>
   <mechanism>
     <laser />
     <color />
@@ -11,7 +11,7 @@
       </dpi>
     </resolution>
   </mechanism>
-  <url>http://www.i-love-epson.co.jp/support/manual/color/lp9800c.htm</url>
+  <url>http://www.i-love-epson.co.jp/support/manual/color/lp8800c.htm</url>
   <lang>
     <postscript level="3" />
     <proprietary />
@@ -19,20 +19,17 @@
   </lang>
   <autodetect>
     <general>
-      <ieee1284>MFG:Epson;MDL:LP-9800C;</ieee1284>
+      <ieee1284>MFG:Epson;MDL:LP-8800CPS;</ieee1284>
       <manufacturer>Epson</manufacturer>
-      <model>LP-9800C</model>
+      <model>LP-8800CPS</model>
     </general>
   </autodetect>
   <functionality>A</functionality>
-  <driver>eplaser-jp</driver>
+  <driver>Postscript-Epson</driver>
   <drivers>
     <driver>
       <id>Postscript-Epson</id>
-      <ppd>PPD/Epson/eplp980c.ppd</ppd>
-    </driver>
-    <driver>
-      <id>eplaser-jp</id>
+      <ppd>PPD/Epson/eplp880c.ppd</ppd>
     </driver>
   </drivers>
   <comments>
@@ -44,10 +41,10 @@
       A scanning add-on for this printer is available, so that one can make
       an multi-function device (printing, scanning, copying) out of it.&lt;p&gt;
 
-      Maximum paper width: 11.7 inches / 29.7 cm
+      Maximum paper width: 12.9 inches / 32.8 cm
       (Wide format printer)&lt;p&gt;
 
-      Printing engine speed: 24 pages/min&lt;p&gt;
+      Printing engine speed: 6 pages/min&lt;p&gt;
 
     </en>
   </comments>
