@@ -1,0 +1,48 @@
+<printer id="printer/Epson-LP-9100PS3">
+  <make>Epson</make>
+  <model>LP-9100PS3</model>
+  <mechanism>
+    <laser />
+    <resolution>
+      <dpi>
+        <x>600</x>
+        <y>600</y>
+      </dpi>
+    </resolution>
+  </mechanism>
+  <lang>
+    <postscript level="3" />
+    <proprietary />
+    <pjl />
+  </lang>
+  <autodetect>
+    <general>
+      <ieee1284>MFG:Epson;MDL:LP-9100PS3;</ieee1284>
+      <manufacturer>Epson</manufacturer>
+      <model>LP-9100PS3</model>
+    </general>
+  </autodetect>
+  <functionality>A</functionality>
+  <driver>Postscript-Epson</driver>
+  <drivers>
+    <driver>
+      <id>Postscript-Epson</id>
+      <ppd>PPD/Epson/eplp9100.ppd</ppd>
+    </driver>
+  </drivers>
+  <comments>
+    <en>
+
+      Epson provides a free (LGPL) driver for this printer. With this
+      the printer should work to its full extent.&lt;p&gt;
+
+      Consumables/Refills: toner cartridge, drum cartridge&lt;p&gt;
+    
+      Maximum paper width: 11.7 inches / 29.7 cm
+      (Wide format printer)&lt;p&gt;
+
+      Printing engine speed: 30 pages/min&lt;p&gt;
+
+    </en>
+  </comments>
+</printer>
