@@ -13,12 +13,31 @@
   </mechanism>
   <url>http://www.i-love-epson.co.jp/products/offirio/printer/lp9200c/.</url>
   <lang>
+    <postscript level="3" />
     <proprietary />
+    <pjl />
   </lang>
+  <autodetect>
+    <general>
+      <ieee1284>MFG:Epson;MDL:LP-9200C;</ieee1284>
+      <manufacturer>Epson</manufacturer>
+      <model>LP-9200C</model>
+    </general>
+  </autodetect>
   <functionality>A</functionality>
   <driver>eplaser-jp</driver>
+  <drivers>
+    <driver>
+      <id>Postscript-Epson</id>
+      <ppd>PPD/Epson/eplp920c.ppd</ppd>
+    </driver>
+    <driver>
+      <id>eplaser-jp</id>
+    </driver>
+  </drivers>
   <comments>
     <en>
+
       Large format (A3/11x17) colour laser printer&lt;p&gt;
       Epson provides a free (LGPL) driver for this printer. With this the
       printer works to its full extent.&lt;p&gt;
@@ -26,6 +45,15 @@
       an multi-function device (printing, scanning, copying) out of it.&lt;p&gt;
 
       Consumables/Refills: &lt;p&gt;
+    
+      &lt;p&gt;
+
+      Maximum paper width: 11.7 inches / 29.7 cm
+      (Wide format printer)&lt;p&gt;
+
+      Printing engine speed: 24 pages/min&lt;p&gt;
+
+
     </en>
   </comments>
 </printer>
