@@ -1,0 +1,47 @@
+<printer id="printer/Epson-LP-9600SPD">
+  <make>Epson</make>
+  <model>LP-9600SPD</model>
+  <mechanism>
+    <resolution>
+      <dpi>
+        <x>600</x>
+        <y>600</y>
+      </dpi>
+    </resolution>
+  </mechanism>
+  <lang>
+    <postscript level="3" />
+    <pjl />
+  </lang>
+  <autodetect>
+    <general>
+      <ieee1284>MFG:Epson;MDL:LP-9600SPD;</ieee1284>
+      <manufacturer>Epson</manufacturer>
+      <model>LP-9600SPD</model>
+    </general>
+  </autodetect>
+  <functionality>A</functionality>
+  <driver>Postscript-Epson</driver>
+  <drivers>
+    <driver>
+      <id>Postscript-Epson</id>
+      <ppd>PPD/Epson/eplp960s.ppd</ppd>
+    </driver>
+    <driver>
+      <id>Postscript</id>
+    </driver>
+  </drivers>
+  <comments>
+    <en>
+      This database entry was automatically generated
+      from the PPD file for this printer.&lt;p&gt;
+
+      Maximum paper width: 11.7 inches / 29.7 cm
+      (Wide format printer)&lt;p&gt;
+
+      Printing engine speed: 40 pages/min&lt;p&gt;
+
+
+    </en>
+  </comments>
+</printer>
