@@ -1,3 +1,13 @@
+2010-11-25  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* printer/Epson-LP-8300CPD.xml, printer/Epson-LP-8500CPD.xml,
+	  printer/Epson-LP-8800CPS.xml, printer/Epson-LP-9100PS3.xml,
+	  printer/Epson-LP-9500CPS.xml, printer/Epson-LP-9600SPD.xml: Added
+	  XML entries for Japanese PPDs from Epson.
+
+	* printer/Epson-LP-9200C.xml, printer/Epson-LP-9800C.xml: Added
+	  links to Japanese PPDs from Epson.
+
 2010-11-24  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* printer/Epson-AcuLaser_C4100PS.xml,
